infrastructure/database-client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: database-client
  name: database-client
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: database-client
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (HEAD)
      labels:
        io.kompose.service: database-client
    spec:
      containers:
        - env:
            - name: PGADMIN_DEFAULT_EMAIL
              value: superuser@staple.io
            - name: PGADMIN_DEFAULT_PASSWORD
              value: staplesuperusersecret
            - name: PGADMIN_SERVER_JSON_FILE
              value: /pgadmin4/servers.json
          image: dpage/pgadmin4:latest
          name: databaseclient
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /pgadmin4/servers.json
              name: database-client-cm0
              subPath: servers.json
      restartPolicy: Always
      volumes:
        - configMap:
            items:
              - key: servers.json
                path: servers.json
            name: database-client-cm0
          name: database-client-cm0
