infrastructure/web-client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: web-client
  name: web-client
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: web-client
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (HEAD)
      labels:
        io.kompose.service: web-client
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - env:
            - name: NODE_ENV
              value: production
          image: ghcr.io/harshitdoshi/sio-tha/siowebclient:siowebclient
          name: webclient
          ports:
            - containerPort: 80
              protocol: TCP
      restartPolicy: Always
