infrastructure/web-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: web-server
  name: web-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: web-server
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (HEAD)
      labels:
        io.kompose.service: web-server
    spec:
      containers:
        - env:
            - name: NGINX_HOST
              value: tha.staple.io
            - name: NGINX_PORT
              value: "80"
          image: nginx:latest
          name: webserver
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf
              name: web-server-cm0
              readOnly: true
              subPath: nginx.conf
      restartPolicy: Always
      volumes:
        - configMap:
            items:
              - key: nginx.conf
                path: nginx.conf
            name: web-server-cm0
          name: web-server-cm0
