infrastructure/web_server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: web-server
  name: web-server
spec:
  ports:
    - name: "8008"
      port: 8008
      targetPort: 80
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: web-server
