infrastructure/database-client-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: database-client-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: "database-client.localhost"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: database-client
                port:
                  number: 80
