infrastructure/web-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-server-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: "web-server.localhost"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: application-programming-interfaces
                port:
                  number: 8000
